refactor(generator): optimize code formatting and improve method naming